Implementing Dockerization for RAG implemenation using Ollama. Rag will have access to project code and be able to answer questions based on project files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     image: multilayer_perceptron
     build:
       context: .
-    volumes:
-      - type: bind
-        source: .
-        target: /app/
-    command: ["/bin/bash"]
+      dockerfile: Dockerfile
+    stdin_open: true
+    tty: true
+
+# docker-compose run multilayer_perceptron /bin/bash
