--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,34 @@
+annotated-types==0.7.0
+click==8.1.7
+coloredlogs==15.0.1
 contourpy==1.2.1
 cycler==0.12.1
 fonttools==4.53.0
 h5py==3.11.0
+humanfriendly==10.0
 joblib==1.4.2
 kiwisolver==1.4.5
+markdown-it-py==3.0.0
 matplotlib==3.9.0
+mdurl==0.1.2
 numpy==2.0.0
 packaging==24.1
 pandas==2.2.2
 pillow==10.3.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+rich==13.9.4
+ruff==0.8.0
 scikit-learn==1.5.0
 scipy==1.13.1
 seaborn==0.13.2
+shellingham==1.5.4
 six==1.16.0
 threadpoolctl==3.5.0
+typer==0.13.1
+typing_extensions==4.12.2
 tzdata==2024.1
