--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
 annotated-types==0.7.0
+anyio==4.6.2.post1
+certifi==2024.8.30
 click==8.1.7
 coloredlogs==15.0.1
 contourpy==1.2.1
 cycler==0.12.1
+exceptiongroup==1.2.2
 fonttools==4.53.0
+h11==0.14.0
 h5py==3.11.0
+httpcore==1.0.7
+httpx==0.27.2
 humanfriendly==10.0
+idna==3.10
 joblib==1.4.2
 kiwisolver==1.4.5
 markdown-it-py==3.0.0
 matplotlib==3.9.0
 mdurl==0.1.2
 numpy==2.0.0
+ollama==0.4.1
 packaging==24.1
 pandas==2.2.2
 pillow==10.3.0
@@ -28,6 +36,7 @@ scipy==1.13.1
 seaborn==0.13.2
 shellingham==1.5.4
 six==1.16.0
+sniffio==1.3.1
 threadpoolctl==3.5.0
 typer==0.13.1
 typing_extensions==4.12.2
