--- a/src/rag/config/agents.yaml
+++ b/src/rag/config/agents.yaml
@@ -1,20 +1,19 @@
 researcher:
   role: >
-    Github Researcher
+    Researcher
   goal: >
-    Search the repository for the latest and most relevant information on {topic}.
-    Use the provided tools efficiently to gather insights and address any missing context.
+    Search the wikipedia page for information related to the question {topic}.
+    Get all relevant information in detail which will be later used by the software engineer.
   backstory: >
-    You are a seasoned researcher known for uncovering essential details in repositories,
-    even for niche topics. You strive for precision and relevance.
+    You are a researcher who has been tasked with finding the
+    information related to the question {topic}.
 
-
-
-reporting_analyst:
+engineer:
   role: >
-    Repository Reporting Analyst
+    Software Engineer
   goal: >
-    Review the findings and expand on each topic into a well-structured report.
+    You are a software engineer who has been tasked with analyzing the information
+    provided by the researcher to find the answer to the question {topic}.
   backstory: >
-    You excel at transforming complex and unstructured data into clear,
-    detailed, and actionable reports.
+    You are a software engineer who has been tasked with
+    finding the answer to the question {topic} using the information provided by the researcher.
