--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,7 @@ annotated-types==0.7.0
 anyio==4.6.2.post1
 appdirs==1.4.4
 asgiref==3.8.1
-asttokens==2.4.1
-async-timeout==4.0.3
+asttokens==3.0.0
 attrs==24.2.0
 auth0-python==4.7.2
 backoff==2.2.1
@@ -23,7 +22,7 @@ chromadb==0.5.20
 click==8.1.7
 cohere==5.12.0
 coloredlogs==15.0.1
-contourpy==1.2.1
+contourpy==1.3.1
 crewai==0.83.0
 crewai-tools==0.14.0
 cryptography==43.0.3
@@ -39,13 +38,12 @@ docx2txt==0.8
 durationpy==0.9
 embedchain==0.1.125
 et_xmlfile==2.0.0
-exceptiongroup==1.2.2
 executing==2.1.0
 fastapi==0.115.5
 fastavro==1.9.7
 filelock==3.16.1
 flatbuffers==24.3.25
-fonttools==4.53.0
+fonttools==4.55.0
 frozenlist==1.5.0
 fsspec==2024.10.0
 google-api-core==2.23.0
@@ -66,7 +64,6 @@ grpcio-status==1.68.0
 grpcio-tools==1.68.0
 h11==0.14.0
 h2==4.1.0
-h5py==3.11.0
 hpack==4.0.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -80,7 +77,7 @@ importlib_metadata==8.5.0
 importlib_resources==6.4.5
 iniconfig==2.0.0
 instructor==1.7.0
-ipython==8.29.0
+ipython==8.30.0
 jedi==0.19.2
 Jinja2==3.1.4
 jiter==0.6.1
@@ -92,7 +89,7 @@ jsonpointer==3.0.0
 jsonref==1.1.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-kiwisolver==1.4.5
+kiwisolver==1.4.7
 kubernetes==31.0.0
 lancedb==0.16.0
 langchain==0.3.9
@@ -108,7 +105,7 @@ Mako==1.3.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.23.1
-matplotlib==3.9.0
+matplotlib==3.9.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mem0ai==0.1.34
@@ -122,7 +119,7 @@ networkx==3.4.2
 nodeenv==1.9.1
 numpy==1.26.4
 oauthlib==3.2.2
-ollama==0.4.1
+ollama==0.4.2
 onnxruntime==1.20.1
 openai==1.55.3
 openpyxl==3.1.5
@@ -140,14 +137,14 @@ opentelemetry-util-http==0.49b2
 orjson==3.10.12
 outcome==1.3.0.post0
 overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
+packaging==24.2
+pandas==2.2.3
 parameterized==0.9.0
 parso==0.8.4
 pdfminer.six==20231228
 pdfplumber==0.11.4
 pexpect==4.9.0
-pillow==10.3.0
+pillow==11.0.0
 pluggy==1.5.0
 portalocker==2.10.1
 posthog==3.7.4
@@ -161,13 +158,13 @@ pyarrow==18.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
-pydantic==2.9.2
+pydantic==2.10.2
 pydantic-settings==2.6.1
-pydantic_core==2.23.4
+pydantic_core==2.27.1
 Pygments==2.18.0
 PyJWT==2.10.1
 pylance==0.19.2
-pyparsing==3.1.2
+pyparsing==3.2.0
 pypdf==5.1.0
 pypdfium2==4.30.0
 PyPika==0.48.9
@@ -179,7 +176,7 @@ pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytube==15.0.0
-pytz==2024.1
+pytz==2024.2
 pyvis==0.3.2
 PyYAML==6.0.2
 qdrant-client==1.12.1
@@ -191,12 +188,12 @@ requests-toolbelt==1.0.0
 rich==13.9.4
 rpds-py==0.21.0
 rsa==4.9
-ruff==0.8.0
 schema==0.7.7
-scikit-learn==1.5.0
-scipy==1.13.1
+scikit-learn==1.5.2
+scipy==1.14.1
 seaborn==0.13.2
 selenium==4.27.1
+setuptools==75.6.0
 shapely==2.0.6
 shellingham==1.5.4
 six==1.16.0
@@ -218,11 +215,11 @@ tqdm==4.67.1
 traitlets==5.14.3
 trio==0.27.0
 trio-websocket==0.11.1
-typer==0.13.1
+typer==0.14.0
 types-requests==2.32.0.20241016
 typing-inspect==0.9.0
 typing_extensions==4.12.2
-tzdata==2024.1
+tzdata==2024.2
 urllib3==2.2.3
 uv==0.5.5
 uvicorn==0.32.1
